--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -4,13 +4,8 @@ html, body {
   text-align: center;
 }
 
-#mainCanvas {
-  width: 600px;
-  height: 600px;
-}
-#video {
-  margin: auto;
+ul, li {
+  list-style: none;
   display: block;
-  width: 300px;
-  height: 300px;
 }
+
