--- a/app/views/register.html
+++ b/app/views/register.html
@@ -8,20 +8,21 @@
     <script type="text/javascript" src="scripts/common.js"></script>
 </head>
 <body>
-<div>
+<div class="register-container">
     <ul>
         <li>用户注册</li>
+        <li class="wrong-message">输入的密码不一致</li>
         <li>
-            <input type="text" placeholder="用户名">
+            <input class="uname" type="text" placeholder="用户名" value="王小明">
         </li>
         <li>
-            <input type="password" placeholder="密码">
+            <input class="upwd" type="password" placeholder="密码" value="12345">
         </li>
         <li>
-            <input type="password" placeholder="确认密码">
+            <input class="upwd-confirm" type="password" placeholder="确认密码" value="12345">
         </li>
         <li>
-            <a href="#">注册</a>
+            <a href="javascript:void(0);" onclick="register();">注册</a>
         </li>
         <li>
             <a href="#">登陆</a>
