--- a/app/views/register.html
+++ b/app/views/register.html
@@ -11,15 +11,15 @@
 <div class="register-container">
     <ul>
         <li>用户注册</li>
-        <li class="wrong-message">输入的密码不一致</li>
+        <li class="wrong-message">输入的信息不符合要求</li>
         <li>
-            <input class="uname" type="text" placeholder="用户名" value="王小明">
+            <input class="uname" type="text" placeholder="用户名" value="hxghxg527">
         </li>
         <li>
-            <input class="upwd" type="password" placeholder="密码" value="12345">
+            <input class="upwd" type="password" placeholder="密码" value="123">
         </li>
         <li>
-            <input class="upwd-confirm" type="password" placeholder="确认密码" value="12345">
+            <input class="upwd-confirm" type="password" placeholder="确认密码" value="123">
         </li>
         <li>
             <a href="javascript:void(0);" onclick="register();">注册</a>
