--- a/app/views/register.html
+++ b/app/views/register.html
@@ -12,6 +12,7 @@
     <ul>
         <li>用户注册</li>
         <li class="wrong-message">输入的信息不符合要求</li>
+        <li><%- message %></li>
         <li>
             <input class="uname" type="text" placeholder="用户名" value="hxghxg527">
         </li>
