add addToCart route.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -30,7 +30,7 @@
             </div>
             <div>$<%= item.price %></div>
             <div>
-                <a href="#">加入购物车</a>
+                <a href="/addToCart/<%= item._id %>">加入购物车</a>
             </div>
         </li>
         <%}%>
