--- a/app/views/home.html
+++ b/app/views/home.html
@@ -28,7 +28,7 @@
             <div>
                 <%= item.name %>
             </div>
-            <div>$<%= item.price %></div>
+            <div>￥<%= item.price %></div>
             <div>
                 <a href="addToCart/<%= item._id %>">加入购物车</a>
             </div>
