update css style.

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -67,3 +67,8 @@ li {
   text-align: right;
   padding: 10px 150px;
 }
+
+.cart-container .cart-td-quantity {
+  text-align: center;
+  width: 80px;
+}
